src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Foundation</fullName>
        <description>Foundation Channel: This Sales Process is specific to the various stages in Oppty.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Verbal Committment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grants%2FSublease</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Contract</fullName>
        </values>
        <values>
            <fullName>Contract Expired%2FTerminated</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lender Strategy</fullName>
        <description>Bringing on new lenders and strategic partner relationships</description>
        <isActive>false</isActive>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Contract Process</fullName>
        <description>Post FFELP School Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Contract</fullName>
        </values>
        <values>
            <fullName>Contract Expired%2FTerminated</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Implementation</fullName>
        </values>
        <values>
            <fullName>In Production</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Verbal Committment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal Contract Process</fullName>
        <description>Renewal Contract Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Contract%2FAmendment</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>RFP</fullName>
        </values>
        <values>
            <fullName>Renewal</fullName>
        </values>
        <values>
            <fullName>Verbal Committment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SWO Process</fullName>
        <description>Government or Guarantor Sales Cycle</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Contract</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Implementation</fullName>
        </values>
        <values>
            <fullName>In Production</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>School Strategy</fullName>
        <description>Sales process for School Selling</description>
        <isActive>false</isActive>
        <values>
            <fullName>Closed - Lost</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_State__c</fullName>
        <description>Billing State for Opportunity from Account Record</description>
        <formula>Account.BillingState</formula>
        <inlineHelpText>Billing State for Opportunity from Account Record</inlineHelpText>
        <label>Account State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Level__c</fullName>
        <formula>if((Or(ISPICKVAL(Account.Type,&apos;School - 2 Year Public&apos;),ISPICKVAL(  Account.Type  , &apos;School - Voc or Tech&apos;))),if(Full_Time_Enrollment__c&gt;0,Account.Total_Members_Activated__c/Full_Time_Enrollment__c,0)	,if(Total_in_Enrollment__c&gt;0,Account.Total_Members_Activated__c/Total_in_Enrollment__c,0))</formula>
        <label>Activation Level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Activation_Reward_Discount__c</fullName>
        <formula>IF(Activation_Level__c  &lt;  0.2,0,
(IF(Activation_Level__c  &gt;= 0.2  &amp;&amp;  Activation_Level__c  &lt; 0.3, 0.10,
(IF(Activation_Level__c  &gt;= 0.3  &amp;&amp;  Activation_Level__c  &lt; 0.4,0.15,
(IF(Activation_Level__c  &gt;= 0.4  &amp;&amp;  Activation_Level__c  &lt; 0.5,0.20,
(IF(Activation_Level__c   &gt;=  0.5, 0.25,0)
))))))))</formula>
        <label>Activation Reward Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Aggregator_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated_Aggregator Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregator_Group__c</fullName>
        <label>Aggregator Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aggregator_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aggregator Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012300000000RgX</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Aggregator</value>
            </filterItems>
            <filterItems>
                <field>Account.Approved__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>Account.ByPassAggregatorFilter__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Cycle__c</fullName>
        <description>Date the annual budget begins</description>
        <inlineHelpText>Date the annual budget begins</inlineHelpText>
        <label>Budget Cycle</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ByPassRolloverWFRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPassRolloverWFRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campus_Engagement_Meeting__c</fullName>
        <label>Campus Engagement Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campus_offices_involved__c</fullName>
        <description>What campus offices were involved in the buying decision.</description>
        <inlineHelpText>Please select which offices on campus were involved in the buying decision.</inlineHelpText>
        <label>Campus offices involved</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Win__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Admissions</fullName>
                </value>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Career Services</fullName>
                </value>
                <value>
                    <fullName>Enrollment Management</fullName>
                </value>
                <value>
                    <fullName>Financial Aid</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Student Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>IF ( INCLUDES ( Account.Category__c  , &quot;Christian Colleges &amp; Universities&quot; ), &quot;Christian Colleges &amp; Universities; &quot;,null ) &amp; 
IF ( INCLUDES ( Account.Category__c  , &quot;Historical Black Colleges &amp; Universities&quot; ), &quot;Historical Black Colleges &amp; Universities; &quot;,null ) &amp; 
IF ( INCLUDES ( Account.Category__c  , &quot;Law School&quot; ), &quot;Law School; &quot;,null ) &amp; 
IF ( INCLUDES ( Account.Category__c  , &quot;Medical School&quot; ), &quot;Medical School; &quot;,null ) &amp; 
IF ( INCLUDES ( Account.Category__c  , &quot;Corporate Account&quot; ), &quot;Corporate Account; &quot;,null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Contract_Status__c</fullName>
        <label>Deprecated Comments:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_s__c</fullName>
        <label>Deprecated Competitor(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ECMC</fullName>
                </value>
                <value>
                    <fullName>Ed Financial Services</fullName>
                </value>
                <value>
                    <fullName>EverFi/Buttonwood</fullName>
                </value>
                <value>
                    <fullName>Financial Aid TV</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>I3/Loan Look</fullName>
                </value>
                <value>
                    <fullName>IGrad</fullName>
                </value>
                <value>
                    <fullName>Inceptia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>TG</fullName>
                </value>
                <value>
                    <fullName>USA Funds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consultation_Date__c</fullName>
        <label>Consultation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Email__c</fullName>
        <formula>Contract_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Fax__c</fullName>
        <formula>Contract_Contact__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Contact Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Contact_Title__c</fullName>
        <formula>Contract_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Negotiation_ASA_Reviewing__c</fullName>
        <label>Contract Negotiation - ASA Reviewing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Negotiations_School_Reviewing__c</fullName>
        <label>Contract Negotiations - School Reviewing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Price__c</fullName>
        <label>Deprecated Contract Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Requested_In_Process_Internally__c</fullName>
        <label>Contract Requested-In Process Internally</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_SOW__c</fullName>
        <label>Deprecated Contract/SOW</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <description>RAE&apos;s fill out this field - shared between school channel, guarantor and grant/sublease.</description>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal Requested</fullName>
                </value>
                <value>
                    <fullName>Contract Requested</fullName>
                </value>
                <value>
                    <fullName>Contract Submitted to Client</fullName>
                </value>
                <value>
                    <fullName>ASA review Client edits</fullName>
                </value>
                <value>
                    <fullName>Client review ASA edits</fullName>
                </value>
                <value>
                    <fullName>Agreement Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Submitted_In_School_Review__c</fullName>
        <label>Contract Submitted-In School Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Terms__c</fullName>
        <label>Deprecated Contract Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Year</fullName>
                </value>
                <value>
                    <fullName>3 Year</fullName>
                </value>
                <value>
                    <fullName>4 Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Years__c</fullName>
        <description>Please put in the number of years of the contract</description>
        <label>Contract Years</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.5</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_has_been_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Has Been Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConvertedLeadEmail__c</fullName>
        <label>ConvertedLeadEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ConvertedLeadId__c</fullName>
        <label>ConvertedLeadId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Renewal_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Renewal Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Rollover_Oppty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Rollover Oppty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_EDM_activities_performed__c</fullName>
        <label>Current EDM activities performed</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_FE_activities_performed__c</fullName>
        <label>Current FE activities performed</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Donor_Type__c</fullName>
        <label>Donor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engagement_Partner_Abbreviation__c</fullName>
        <inlineHelpText>Enter the abbreviation name for the Engagement Partner - to be used within Proposal merge process.</inlineHelpText>
        <label>Engagement Partner Abbreviation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Usage__c</fullName>
        <inlineHelpText>Select the expected usage (by percent) based on the Estimated Membership number.</inlineHelpText>
        <label>Estimated Usage %</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executed_Contract_Received__c</fullName>
        <label>Deprecated Executed Contract Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>Please place the fiscal year of this opportunity</description>
        <label>Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Time_Enrollment__c</fullName>
        <label>Full-Time Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Income_Schedule__c</fullName>
        <formula>IF (ISPICKVAL(Invoice_Frequency__c,&quot;Semi-Annually&quot;),&quot;6 months&quot;,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Monthly&quot;),&quot;1 month&quot;,  
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Annually&quot;),&quot;12 months&quot;, 
IF (ISPICKVAL(Invoice_Frequency__c,&quot;Quarterly&quot;),&quot;3 months&quot;,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;2 Year (Single Payment)&quot;),&quot;24 months&quot;,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;3 Year (Single Payment)&quot;),&quot;36 months&quot;,
IF (ISPICKVAL(Invoice_Frequency__c,&quot;1 Time&quot;),&quot;6 months&quot;,null)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Income Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introductory_Meeting__c</fullName>
        <label>Deprecated_Introductory Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Frequency__c</fullName>
        <label>Invoice Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2 Year (Single Payment)</fullName>
                </value>
                <value>
                    <fullName>3 Year (Single Payment)</fullName>
                </value>
                <value>
                    <fullName>1 Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Known_Obstacles_for_SALT__c</fullName>
        <label>Known Obstacles for SALT</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <label>Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_ID__c</fullName>
        <label>Lead Record Type ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_to_Opp_Age__c</fullName>
        <formula>TEXT(
 FLOOR( Opportunity_Close_date__c  -  Lead_Created_Date__c )
)  &amp; &quot; Days &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead to Opp Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LenderContract_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be checked/yes when Lender Contracts have been executed/and activated in the contract Custom Object</description>
        <label>Contract Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <inlineHelpText>The price of the product(s) related to this Opportunity.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loss_Stage__c</fullName>
        <description>What stage of the Sales/Opportunity cycle was the sale lost.</description>
        <label>Loss Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Qualification</fullName>
                </value>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Pre-Implementation</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Assign Resources</fullName>
                </value>
                <value>
                    <fullName>Presentation/Info Gathering</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Closed - Won</fullName>
                </value>
                <value>
                    <fullName>Closed - Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the opportunity is lost check this box and fill out the loss reasons.</description>
        <inlineHelpText>Don&apos;t forget to choose the loss reasons.</inlineHelpText>
        <label>Loss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_for_Campus_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need for Campus Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_for_Sponsorship_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need for Sponsorship Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Schedule meeting/WebEx</fullName>
                </value>
                <value>
                    <fullName>Send follow-up email</fullName>
                </value>
                <value>
                    <fullName>Make phone call</fullName>
                </value>
                <value>
                    <fullName>Elevate to higher level on campus</fullName>
                </value>
                <value>
                    <fullName>Utilize Internal ASA Resources</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Enrolled_Students__c</fullName>
        <label>Number of Enrolled Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppWorkflowFired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OppWorkflowFired?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_date__c</fullName>
        <label>Opportunity Close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Profile__c</fullName>
        <formula>Owner.Profile.Name</formula>
        <label>Opportunity Owner(Profile)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Count__c</fullName>
        <label>Opportunity Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opt_out_of_Publicity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deprecated Opt out of Publicity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Next_Step__c</fullName>
        <label>Other Next Step</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnership_Opportunity__c</fullName>
        <inlineHelpText>This field describes different flavors of Opportunities with possible third parties.</inlineHelpText>
        <label>Partnership Opportunity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>QSP: Prospective Source</fullName>
                </value>
                <value>
                    <fullName>Non-QSP: Performance Based Revenue</fullName>
                </value>
                <value>
                    <fullName>Content (Member Benefit)</fullName>
                </value>
                <value>
                    <fullName>Capability (Member Benefit)</fullName>
                </value>
                <value>
                    <fullName>Career Related (Member Benefit)</fullName>
                </value>
                <value>
                    <fullName>Personal/Self Discovery (Member Benefit)</fullName>
                </value>
                <value>
                    <fullName>CSR/PR Opp: ASA Sponsored Expenditure</fullName>
                </value>
                <value>
                    <fullName>Corporate Offering</fullName>
                </value>
                <value>
                    <fullName>Foundation Grant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pipeline_Amount__c</fullName>
        <description>Field to capture Amount or List price based on Stage for executive reporting.</description>
        <formula>IF(  OR(ISPICKVAL( StageName ,  &quot;Discovery&quot; ),ISPICKVAL( StageName , &quot;Prospect&quot;),ISPICKVAL( StageName ,&quot;Proposal&quot;)),  List_Price__c ,  Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field to capture Amount or List price based on Stage for executive reporting.</inlineHelpText>
        <label>Pipeline Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Stage__c</fullName>
        <label>Previous Stage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Conversation__c</fullName>
        <label>Price Conversation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Concerns__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Put a checkmark in this field if you have encountered concerns about product pricing during sales conversations.</inlineHelpText>
        <label>Pricing Concerns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Loss_Reason__c</fullName>
        <label>Primary Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Loss__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Budget Cycle/Lack of Funds</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Currently under contract</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>In house solution</fullName>
                </value>
                <value>
                    <fullName>Interested, but not ready yet</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>RFP Selection</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>